--- a/ads/build.gradle
+++ b/ads/build.gradle
@@ -63,7 +63,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.2.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation "androidx.core:core-ktx:1.6.0"
-    implementation 'com.google.android.gms:play-services-ads:21.4.0'
+    implementation 'com.google.android.gms:play-services-ads:22.1.0'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
     implementation 'com.google.android.gms:play-services-basement:17.1.1'
     implementation "androidx.core:core-ktx:1.6.0"
@@ -73,5 +73,9 @@ dependencies {
 
 
     implementation 'com.airbnb.android:lottie:5.0.2'
+
+    //appsflyer
+    implementation 'com.appsflyer:af-android-sdk:6.11.2'
+    implementation 'com.appsflyer:adrevenue:6.9.1'
 
 }
