--- a/ads/build.gradle
+++ b/ads/build.gradle
@@ -8,8 +8,8 @@ android {
     defaultConfig {
         minSdkVersion 17
         targetSdkVersion 33
-        versionCode 104
-        versionName "1.0.4"
+        versionCode 108
+        versionName "1.0.8"
 
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -39,35 +39,35 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
-    implementation 'com.intuit.sdp:sdp-android:1.0.6'
-    implementation 'androidx.lifecycle:lifecycle-process:2.2.0'
+    implementation 'com.intuit.sdp:sdp-android:1.1.0'
+    implementation 'androidx.lifecycle:lifecycle-process:2.6.1'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 
     def multidex_version = "2.0.1"
     implementation "androidx.multidex:multidex:$multidex_version"
-    def billing_version = "4.0.0"
-    implementation "com.android.billingclient:billing:$billing_version"
+    implementation "com.android.billingclient:billing:6.0.1"
     implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
 
     implementation platform('com.google.firebase:firebase-bom:31.2.0')
     implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.google.android.gms:play-services-ads:22.1.0'
+    implementation 'com.google.android.gms:play-services-ads:22.2.0'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
-    implementation 'com.google.android.gms:play-services-basement:17.1.1'
-    implementation "androidx.core:core-ktx:1.6.0"
+    implementation 'com.google.android.gms:play-services-basement:18.2.0'
+    implementation "androidx.core:core-ktx:1.10.1"
+    implementation 'com.google.code.gson:gson:2.10.1'
 
 //fb sdk
     implementation 'com.facebook.android:facebook-android-sdk:16.1.2'
 
 
-    implementation 'com.airbnb.android:lottie:5.0.2'
+    implementation 'com.airbnb.android:lottie:6.0.0'
 
     //appsflyer
     implementation 'com.appsflyer:af-android-sdk:6.11.2'
