--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
-plugins {
-    id 'com.android.application'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-parcelize'
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     compileSdkVersion 33
@@ -9,8 +12,8 @@ android {
         applicationId "com.nlbnadslibrary"
         minSdkVersion 24
         targetSdkVersion 33
-        versionCode 108
-        versionName "1.0.8"
+        versionCode 110
+        versionName "1.1.0"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -41,6 +44,17 @@ dependencies {
     implementation 'com.google.android.play:core:1.10.3'
     implementation 'com.google.android.gms:play-services-ads:22.2.0'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.0"
+
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:31.5.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-crashlytics'
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.firebase:firebase-config:21.4.1'
+
+
 
 
 }
