--- a/ads/build.gradle
+++ b/ads/build.gradle
@@ -1,5 +1,3 @@
-
-
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
@@ -7,10 +5,10 @@ apply plugin: 'kotlin-parcelize'
 
 
 android {
-    compileSdkVersion 33
+    compileSdk 33
 
     defaultConfig {
-        minSdkVersion 17
+        minSdkVersion 23
         targetSdkVersion 33
         versionCode 108
         versionName "1.0.8"
@@ -66,7 +64,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.firebase:firebase-config:21.4.1'
 
-    implementation 'com.google.android.gms:play-services-ads:22.2.0'
+    implementation 'com.google.android.gms:play-services-ads:22.3.0'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
     implementation 'com.google.android.gms:play-services-basement:18.2.0'
     implementation 'com.google.code.gson:gson:2.10.1'
@@ -80,7 +78,7 @@ dependencies {
     //appsflyer
     implementation 'com.appsflyer:af-android-sdk:6.11.2'
     implementation 'com.appsflyer:adrevenue:6.9.1'
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.0"
-
+    //Adjust
+    api 'com.adjust.sdk:adjust-android:4.33.5'
+    api 'com.android.installreferrer:installreferrer:2.2'
 }
