--- a/ads/build.gradle
+++ b/ads/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-        minSdkVersion 23
+        minSdkVersion 24
         targetSdkVersion 33
         versionCode 108
         versionName "1.0.8"
@@ -79,6 +79,6 @@ dependencies {
     implementation 'com.appsflyer:af-android-sdk:6.11.2'
     implementation 'com.appsflyer:adrevenue:6.9.1'
     //Adjust
-    api 'com.adjust.sdk:adjust-android:4.33.5'
-    api 'com.android.installreferrer:installreferrer:2.2'
+    implementation 'com.adjust.sdk:adjust-android:4.33.5'
+    implementation 'com.android.installreferrer:installreferrer:2.2'
 }
